home spacing issue

--- a/style.css
+++ b/style.css
@@ -1236,7 +1236,6 @@ font-size: 20px;
   }
 
   #home {
-    height: 150vh;
     min-height: 100%;
   }
 
